add logo for nested

--- a/404.html
+++ b/404.html
@@ -16,6 +16,8 @@
       <a href="/" class="icon icon-airbnb link-icon h2">
         <span class="screen-reader-only"> Airbnb </span>
         <img src="assets/images/404-logo.png" alt="" />
+        <!-- For nested -->
+        <img src="../assets/images/404-logo.png" alt="" />
       </a>
     </header>
     <div class="page-container page-container-responsive">
