explore-filter-daterange -> calendar

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -905,7 +905,7 @@
                           <div>
                             <div style="width: 292px">
                               <div
-                                class="calendar__days"
+                                class="calendar__week"
                                 aria-hidden="true"
                                 role="presentation"
                               >
@@ -939,14 +939,14 @@
                                 </div>
                               </div>
                               <div
-                                class="explore-filter-daterange__date"
+                                class="calendar__date"
                                 tabindex="-1"
                                 role="application"
                                 aria-roledescription=""
                                 aria-label="Calendar (Date picker)"
                               >
                                 <div
-                                  class="explore-filter-daterange__date-wrapper"
+                                  class="calendar__date-wrapper"
                                   style="width: 292px; height: 343px"
                                 >
                                   <div
@@ -956,7 +956,7 @@
                                       width: 822px;
                                     "
                                   >
-                                    <div class="explore-filter-daterange__date-prev-month">
+                                    <div class="calendar__date-prev-month">
                                       <div
                                         class="main-content__calendar-container"
                                         data-visible="false"
@@ -1969,7 +1969,7 @@
                                         </table>
                                       </div>
                                     </div>
-                                    <div class="explore-filter-daterange__date-current-month">
+                                    <div class="calendar__date-current-month">
                                       <div
                                         class="main-content__calendar-container"
                                         data-visible="true"
@@ -3001,7 +3001,7 @@
                                         </table>
                                       </div>
                                     </div>
-                                    <div class="explore-filter-daterange__date-next-month">
+                                    <div class="calendar__date-next-month">
                                       <div
                                         class="main-content__calendar-container"
                                         data-visible="false"
