--- a/explore-when.html
+++ b/explore-when.html
@@ -281,10 +281,10 @@
                                                                               "
                                                                             >
                                                                               <ul
-                                                                                class="explore-filter-daterange__days-list"
+                                                                                class="calendar__weekdays"
                                                                               >
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -292,7 +292,7 @@
                                                                                   Su
                                                                                 </li>
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -300,7 +300,7 @@
                                                                                   Mo
                                                                                 </li>
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -308,7 +308,7 @@
                                                                                   Tu
                                                                                 </li>
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -316,7 +316,7 @@
                                                                                   We
                                                                                 </li>
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -324,7 +324,7 @@
                                                                                   Th
                                                                                 </li>
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -332,7 +332,7 @@
                                                                                   Fr
                                                                                 </li>
                                                                                 <li
-                                                                                  class="explore-filter-daterange__days-item"
+                                                                                  class="calendar__weekday"
                                                                                   style="
                                                                                     width: 70px;
                                                                                   "
@@ -343,7 +343,7 @@
                                                                             </div>
                                                                           </div>
                                                                           <div
-                                                                            class="explore-filter-daterange__date"
+                                                                            class="calendar__date"
                                                                             tabindex="-1"
                                                                             role="application"
                                                                             aria-label="Calendar"
