explore-filter__date -> calendar

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -956,7 +956,7 @@
                                       width: 822px;
                                     "
                                   >
-                                    <div class="calendar__date-prev-month">
+                                    <div class="calendar__prev-month">
                                       <div
                                         class="main-content__calendar-container"
                                         data-visible="false"
@@ -1969,7 +1969,7 @@
                                         </table>
                                       </div>
                                     </div>
-                                    <div class="calendar__date-current-month">
+                                    <div class="calendar__current-month">
                                       <div
                                         class="main-content__calendar-container"
                                         data-visible="true"
@@ -3001,7 +3001,7 @@
                                         </table>
                                       </div>
                                     </div>
-                                    <div class="calendar__date-next-month">
+                                    <div class="calendar__next-month">
                                       <div
                                         class="main-content__calendar-container"
                                         data-visible="false"
