calendar-sideba__qnty-sched -> text-sm

--- a/calendar.html
+++ b/calendar.html
@@ -1737,7 +1737,7 @@
                           </div>
                         </h1>
                         <div style="margin-top: 8px; margin-bottom: 24px">
-                          <div class="calendar-sideba__qnty-sched">
+                          <div class="text-sm">
                             Add availability so guests can start booking!
                           </div>
                         </div>
