--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3191,7 +3191,7 @@
                           </div>
                         </h1>
                         <div style="margin-top: 8px; margin-bottom: 24px">
-                          <div class="calendar-sideba__qnty-sched">2 SCHEDULED</div>
+                          <div class="text-sm">2 SCHEDULED</div>
                         </div>
                         <div class="calendar-sideba__sched-event">
                           <button
