--- a/products-luxe.html
+++ b/products-luxe.html
@@ -16545,7 +16545,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="calendar-sideba__qnty-sched"
+                                                                                  class="text-sm"
                                                                                 >
                                                                                   <span
                                                                                     >1
@@ -17043,7 +17043,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="calendar-sideba__qnty-sched"
+                                                                                  class="text-sm"
                                                                                 >
                                                                                   <span
                                                                                     >1
@@ -17742,7 +17742,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="calendar-sideba__qnty-sched"
+                                                                                  class="text-sm"
                                                                                 >
                                                                                   <span
                                                                                     >1
