--- a/products.html
+++ b/products.html
@@ -16828,7 +16828,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="calendar-sideba__qnty-sched"
+                                                                                  class="text-sm"
                                                                                 >
                                                                                   <span
                                                                                     >1
@@ -17326,7 +17326,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="calendar-sideba__qnty-sched"
+                                                                                  class="text-sm"
                                                                                 >
                                                                                   <span
                                                                                     >1
@@ -18025,7 +18025,7 @@
                                                                                 aria-disabled="false"
                                                                               >
                                                                                 <div
-                                                                                  class="calendar-sideba__qnty-sched"
+                                                                                  class="text-sm"
                                                                                 >
                                                                                   <span
                                                                                     >1
