--- a/profile.html
+++ b/profile.html
@@ -907,7 +907,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </div>
                                             <div class="_1fopc40">
                                               <div class="form__badge">
-                                                <span class="calendar-sideba__qnty-sched" lang="en"
+                                                <span class="text-sm" lang="en"
                                                   >English</span
                                                 >
                                                 <div class="form__badge-btn">
@@ -943,7 +943,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 </div>
                                               </div>
                                               <div class="form__badge">
-                                                <span class="calendar-sideba__qnty-sched" lang="tl"
+                                                <span class="text-sm" lang="tl"
                                                   >Tagalog</span
                                                 >
                                                 <div class="form__badge-btn">
@@ -2000,7 +2000,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       </div>
                                       <div class="_1fopc40">
                                         <div class="form__badge">
-                                          <span class="calendar-sideba__qnty-sched" lang="en"
+                                          <span class="text-sm" lang="en"
                                             >English</span
                                           >
                                           <div class="form__badge-btn">
@@ -2034,7 +2034,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           </div>
                                         </div>
                                         <div class="form__badge">
-                                          <span class="calendar-sideba__qnty-sched" lang="tl"
+                                          <span class="text-sm" lang="tl"
                                             >Tagalog</span
                                           >
                                           <div class="form__badge-btn">
