--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -417,7 +417,7 @@
                                                           >
                                                         </div>
                                                         <div
-                                                          class="calendar-sideba__qnty-sched"
+                                                          class="text-sm"
                                                         >
                                                           <div>
                                                             Expiration: 04/2026
@@ -1192,7 +1192,7 @@
                                                           >
                                                         </div>
                                                         <div
-                                                          class="calendar-sideba__qnty-sched"
+                                                          class="text-sm"
                                                         >
                                                           <div>
                                                             Expiration: 04/2026
