calendar-sideba__sched-event-time-wrapper -> font-extrabold, calendar-sideba__sched-event -> pb-4

--- a/calendar.html
+++ b/calendar.html
@@ -1041,7 +1041,7 @@
                                     >
                                       <div class="calendar-section__month-time-content">
                                         <div>
-                                          <span class="calendar-sideba__sched-event-time-wrapper">9:00 PM</span>
+                                          <span class="font-extrabold">9:00 PM</span>
                                         </div>
                                         <span class="calendar-section__month-day-event-qnty">0/10</span
                                         ><span class="calendar-section__month-day-event-icon-wrapper"
