--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3193,7 +3193,7 @@
                         <div style="margin-top: 8px; margin-bottom: 24px">
                           <div class="text-sm">2 SCHEDULED</div>
                         </div>
-                        <div class="calendar-sideba__sched-event">
+                        <div class="pb-4">
                           <button
                             data-testid="Cooking Deep Fried Bright Orange Battered Eggs"
                             type="button"
@@ -3203,7 +3203,7 @@
                               <div class="h-full">
                                 <div class="calendar-sideba__sched-event-text-wrapper">
                                   <div class="calendar-sideba__sched-event-desc-wrapper">
-                                    <div class="calendar-sideba__sched-event-time-wrapper">
+                                    <div class="font-extrabold">
                                       <span class="text-highlight dir dir-ltr"
                                         >12:00 to 12:30 PM (PST)</span
                                       ><span aria-hidden="true"
@@ -3272,7 +3272,7 @@
                             </div>
                           </button>
                         </div>
-                        <div class="calendar-sideba__sched-event">
+                        <div class="pb-4">
                           <button
                             data-testid="Cooking Deep Fried Bright Orange Battered Eggs"
                             type="button"
@@ -3282,7 +3282,7 @@
                               <div class="h-full">
                                 <div class="calendar-sideba__sched-event-text-wrapper">
                                   <div class="calendar-sideba__sched-event-desc-wrapper">
-                                    <div class="calendar-sideba__sched-event-time-wrapper">
+                                    <div class="font-extrabold">
                                       <span class="text-highlight dir dir-ltr"
                                         >11:00 to 11:30 PM (PST)</span
                                       ><span aria-hidden="true"
