--- a/notifications.html
+++ b/notifications.html
@@ -741,7 +741,7 @@
                                                         aria-hidden="true"
                                                         class="inbox-container__message-name-overlay"
                                                       >
-                                                        <span class="calendar-sideba__sched-event-time-wrapper"
+                                                        <span class="font-extrabold"
                                                           >Airbnb Support</span
                                                         >
                                                       </div>
@@ -752,7 +752,7 @@
                                                     </div>
                                                     <div class="inbox-container__message-text-msg">
                                                       <div aria-hidden="true">
-                                                        <span class="calendar-sideba__sched-event-time-wrapper"
+                                                        <span class="font-extrabold"
                                                           >Can you describe your
                                                           issue in a few
                                                           sentences? This will
