--- a/resolutions.html
+++ b/resolutions.html
@@ -62,7 +62,7 @@
                 </div>
                 <ol class="place__rate-text dir dir-ltr">
                   <li class="place__rate-text-li dir dir-ltr">
-                    <span class="calendar-sideba__sched-event-time-wrapper">Send or request money - Airbnb</span>
+                    <span class="font-extrabold">Send or request money - Airbnb</span>
                   </li>
                 </ol>
                 <span class="resolution-exit"
