--- a/signup_login.html
+++ b/signup_login.html
@@ -3209,7 +3209,7 @@
                                       >
                                       <div class="description-textarea__help-text">
                                         By selecting
-                                        <span class="calendar-sideba__sched-event-time-wrapper"
+                                        <span class="font-extrabold"
                                           >Agree and continue</span
                                         >, I agree to Airbnb’s
                                         <a
@@ -6581,7 +6581,7 @@
                                     >
                                     <div class="description-textarea__help-text">
                                       By selecting
-                                      <span class="calendar-sideba__sched-event-time-wrapper"
+                                      <span class="font-extrabold"
                                         >Agree and continue</span
                                       >, I agree to Airbnb’s
                                       <a
