--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1099,23 +1099,23 @@
                                 <p class="site-content__content-wrapper-rules-note"></p>
                                 <ul class="site-content__content-wrapper-rules-ol">
                                   <li>
-                                    <strong class="calendar-sideba__sched-event-time-wrapper">Expertise:</strong>
+                                    <strong class="font-extrabold">Expertise:</strong>
                                     Exceptional skill, ability, or background
                                   </li>
                                   <li>
-                                    <strong class="calendar-sideba__sched-event-time-wrapper"
+                                    <strong class="font-extrabold"
                                       >Participation:</strong
                                     >
                                     Engaging activities that leap off the screen
                                   </li>
                                   <li>
-                                    <strong class="calendar-sideba__sched-event-time-wrapper"
+                                    <strong class="font-extrabold"
                                       >Easy to do:</strong
                                     >
                                     Requires minimal supplies and preparation
                                   </li>
                                   <li>
-                                    <strong class="calendar-sideba__sched-event-time-wrapper"
+                                    <strong class="font-extrabold"
                                       >Technical quality:</strong
                                     >
                                     Comfort with the Zoom platform and
