--- a/transaction_history.html
+++ b/transaction_history.html
@@ -423,7 +423,7 @@
                               <div style="margin-bottom: 32px">
                                 <div class="_1x0jb4k">
                                   <div class="_1rauing" style="z-index: 1">
-                                    <div class="calendar-sideba__sched-event">
+                                    <div class="pb-4">
                                       <section
                                         role="status"
                                         class="page-shell-mobile__alert-notification page-shell-mobile__alert-attr-notifcation dir dir-ltr"
