--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -118,7 +118,7 @@
                               d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
                             ></path>
                           </g></svg></span></span
-                    ><span class="calendar-sideba__sched-event-time-wrapper">Payment</span>
+                    ><span class="font-extrabold">Payment</span>
                   </li>
                 </ol>
                 <span class="resolution-exit"
