calendar-sideba__sched-event-note-wrapper -> text-sm

--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3220,7 +3220,7 @@
                                       Hosted by Jose Angelo Ramirez
                                     </div>
                                   </div>
-                                  <div class="calendar-sideba__sched-event-note-wrapper">
+                                  <div class="text-sm">
                                     <div class="calendar-sideba__sched-event-note">
                                       <span class="text-highlight dir dir-ltr"
                                         >Private group · Not booked yet</span
@@ -3299,7 +3299,7 @@
                                       Hosted by Jose Angelo Ramirez
                                     </div>
                                   </div>
-                                  <div class="calendar-sideba__sched-event-note-wrapper">
+                                  <div class="text-sm">
                                     <div class="calendar-sideba__sched-event-note">
                                       <span class="text-highlight dir dir-ltr"
                                         >Private group · Not booked yet</span
