_13wkz77 & calendar-sideba__sched-btn-wrapper -> pt-2

--- a/basics.html
+++ b/basics.html
@@ -657,7 +657,7 @@
                                   </div>
                                 </div>
 
-                                <div class="_13wkz77">
+                                <div class="pt-2">
                                   <div
                                     class="products-container__alert-warning-date-text"
                                     id="location-error-text"
