--- a/calendar.html
+++ b/calendar.html
@@ -1741,7 +1741,7 @@
                             Add availability so guests can start booking!
                           </div>
                         </div>
-                        <div class="calendar-sideba__sched-btn-wrapper">
+                        <div class="pt-2">
                           <button
                             data-testid="schedule-experience-button"
                             type="button"
