--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3351,7 +3351,7 @@
                             </div>
                           </button>
                         </div>
-                        <div class="calendar-sideba__sched-btn-wrapper">
+                        <div class="pt-2">
                           <button
                             data-testid="schedule-experience-button"
                             type="button"
