calendar-sideba__ -> calendar-sidebar__

--- a/calendar.html
+++ b/calendar.html
@@ -1732,7 +1732,7 @@
                           class="heading"
                           elementtiming="LCP-target"
                         >
-                          <div id="calendar-sidebar-heading" class="calendar-sideba__header">
+                          <div id="calendar-sidebar-heading" class="calendar-sidebar__header">
                             Jul 1, 2022
                           </div>
                         </h1>
