fix merchandising by recloning it, refactor classnames

--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -297,7 +297,7 @@
                             <div class="main-content__header-current_date">
                               <div class="main-content__header-date--today">July 9, 2022</div>
                               <div class="inline hidden-xl">July 2022</div>
-                              <span class="main-content__header-current_date_btn_wrapper"
+                              <span class="ml-2"
                                 ><svg
                                   viewBox="0 0 32 32"
                                   xmlns="http://www.w3.org/2000/svg"
