--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -406,7 +406,7 @@
                                                             >MasterCard ••••
                                                             3765</span
                                                           ><span
-                                                            class="main-content__header-current_date_btn_wrapper"
+                                                            class="ml-2"
                                                             ><span
                                                               class="payment-methods__bg-0 box-border d-inline-flex payment-methods__h-20 w-fit-content f-items-center f-justify-center ws-nowrap rounded-small pa-2-5 text-black fs-12 lh-16 font-w-bold text-uppercase bg-white dir dir-ltr"
                                                               ><span
@@ -1181,7 +1181,7 @@
                                                             >MasterCard ••••
                                                             3765</span
                                                           ><span
-                                                            class="main-content__header-current_date_btn_wrapper"
+                                                            class="ml-2"
                                                             ><span
                                                               class="payment-methods__bg-0 box-border d-inline-flex payment-methods__h-20 w-fit-content f-items-center f-justify-center ws-nowrap rounded-small pa-2-5 text-black fs-12 lh-16 font-w-bold text-uppercase bg-white dir dir-ltr"
                                                               ><span
@@ -2420,7 +2420,7 @@
                   <div>
                     <div data-testid="submit-button">
                       <button type="button" class="btn-dark">
-                        <span class="_14d5b3i"
+                        <span class="btn-content-icontext"
                           ><span class="_3hmsj">Done</span></span
                         >
                       </button>
