--- a/products.html
+++ b/products.html
@@ -9180,7 +9180,7 @@
                                                             ></path>
                                                           </svg>
                                                           <div
-                                                            class="main-content__header-current_date_btn_wrapper"
+                                                            class="ml-2"
                                                           >
                                                             Show all photos
                                                           </div>
