--- a/resources.html
+++ b/resources.html
@@ -1131,7 +1131,7 @@
                                                           ></path>
                                                         </g></svg
                                                     ></span></button
-                                                  ><span class="new-arrow-space"></span
+                                                  ><span class="ml-2"></span
                                                   ><button
                                                     aria-label="Next"
                                                     type="button"
@@ -1858,7 +1858,7 @@
                                                           ></path>
                                                         </g></svg
                                                     ></span></button
-                                                  ><span class="new-arrow-space"></span
+                                                  ><span class="ml-2"></span
                                                   ><button
                                                     aria-label="Next"
                                                     type="button"
@@ -2585,7 +2585,7 @@
                                                           ></path>
                                                         </g></svg
                                                     ></span></button
-                                                  ><span class="new-arrow-space"></span
+                                                  ><span class="ml-2"></span
                                                   ><button
                                                     aria-label="Next"
                                                     type="button"
@@ -3311,7 +3311,7 @@
                                                         ></path>
                                                       </g></svg
                                                   ></span></button
-                                                ><span class="new-arrow-space"></span
+                                                ><span class="ml-2"></span
                                                 ><button
                                                   aria-label="Next"
                                                   type="button"
